kubernetes/apps/networking/traefik-forward-auth/app/service.yaml
---
#
# Auth Service
#
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  labels:
    app: traefik-forward-auth
spec:
  type: ClusterIP
  selector:
    app: traefik-forward-auth
  ports:
    - name: auth-http
      port: 4181
      targetPort: 4181
