kubernetes/apps/networking/traefik-forward-auth/app/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
  namespace: networking
  labels:
    app: traefik-forward-auth
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: http://traefik-forward-auth.kube-system.svc.cluster.local
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: traefik-forward-auth
          port: 4181
      middlewares:
        - name: traefik-forward-auth
          namespace: networking
  tls:
    secretName: "auth-${SECRET_DOMAIN/./-}-tls"
